// Prisma schema for the university lending domain.
//
// The domain model is documented in:
// - docs/architecture/uml/modelo-dominio.puml
// - docs/architecture/structurizr/workspace.dsl
//
// Business invariants that require application services or custom SQL migrations
// are documented beside the affected models.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// -----------------------------------------------------------------------------
// INVENTARIO
// -----------------------------------------------------------------------------

model CategoriaRecurso {
  id                      String    @id @default(uuid()) @db.Uuid
  nombre                  String    @unique @db.VarChar(120)
  tiempoMaximoPrestamoDias Int
  createdAt               DateTime  @default(now()) @db.Timestamptz(3)
  updatedAt               DateTime  @updatedAt @db.Timestamptz(3)

  recursos Recurso[]

  @@map("categorias_recurso")
}

model Recurso {
  id          String   @id @default(uuid()) @db.Uuid
  categoriaId String   @db.Uuid
  nombre      String   @db.VarChar(180)
  descripcion String?  @db.Text
  createdAt   DateTime @default(now()) @db.Timestamptz(3)
  updatedAt   DateTime @updatedAt @db.Timestamptz(3)

  categoria CategoriaRecurso @relation(fields: [categoriaId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  ejemplares Ejemplar[]

  // La disponibilidad es un atributo derivado: existe si hay al menos un
  // ejemplar con estado DISPONIBLE. No se persiste para evitar inconsistencias.
  @@index([categoriaId])
  @@index([nombre])
  @@map("recursos")
}

model Ejemplar {
  id              String          @id @default(uuid()) @db.Uuid
  recursoId       String          @db.Uuid
  codigoInventario String          @unique @db.VarChar(80)
  estado          EstadoEjemplar  @default(DISPONIBLE)
  createdAt       DateTime        @default(now()) @db.Timestamptz(3)
  updatedAt       DateTime        @updatedAt @db.Timestamptz(3)

  recurso       Recurso                @relation(fields: [recursoId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  observaciones ObservacionEjemplar[]
  prestamos     Prestamo[]

  @@index([recursoId, estado])
  @@index([estado])
  @@map("ejemplares")
}

model ObservacionEjemplar {
  id         String   @id @default(uuid()) @db.Uuid
  ejemplarId String   @db.Uuid
  fecha      DateTime @default(now()) @db.Timestamptz(3)
  descripcion String  @db.Text
  createdAt  DateTime @default(now()) @db.Timestamptz(3)

  ejemplar Ejemplar @relation(fields: [ejemplarId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  @@index([ejemplarId, fecha])
  @@map("observaciones_ejemplar")
}

// -----------------------------------------------------------------------------
// USUARIOS Y REGISTRO
// -----------------------------------------------------------------------------

model SolicitudRegistro {
  id                         String                   @id @default(uuid()) @db.Uuid
  tipoUsuario                TipoUsuario
  identificadorInstitucional String?                  @db.VarChar(80)
  fechaSolicitud             DateTime                 @default(now()) @db.Timestamptz(3)
  estado                     EstadoSolicitud          @default(PENDIENTE)
  usuarioAprobadoId          String?                  @db.Uuid
  createdAt                  DateTime                 @default(now()) @db.Timestamptz(3)
  updatedAt                  DateTime                 @updatedAt @db.Timestamptz(3)

  evidencias     EvidenciaVinculacion[]
  usuarioAprobado Usuario?              @relation("SolicitudAprobadaUsuario", fields: [usuarioAprobadoId], references: [id], onDelete: SetNull, onUpdate: Cascade)

  @@index([estado, fechaSolicitud])
  @@index([identificadorInstitucional])
  @@index([usuarioAprobadoId])
  @@map("solicitudes_registro")
}

model EvidenciaVinculacion {
  id                  String   @id @default(uuid()) @db.Uuid
  solicitudRegistroId String   @db.Uuid
  informacion         String   @db.Text
  createdAt           DateTime @default(now()) @db.Timestamptz(3)

  solicitudRegistro SolicitudRegistro @relation(fields: [solicitudRegistroId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  @@index([solicitudRegistroId])
  @@map("evidencias_vinculacion")
}

model Usuario {
  id                         String             @id @default(uuid()) @db.Uuid
  nombre                     String             @db.VarChar(180)
  tipoUsuario                TipoUsuario
  identificadorInstitucional String?            @unique @db.VarChar(80)
  vinculacionVigente         Boolean            @default(true)
  confianza                  Decimal            @default(100.00) @db.Decimal(5, 2)
  createdAt                  DateTime           @default(now()) @db.Timestamptz(3)
  updatedAt                  DateTime           @updatedAt @db.Timestamptz(3)

  // nivelConfianza, penalizadoActualmente y habilitadoParaPrestamos son
  // propiedades derivadas y deben calcularse en el dominio.
  solicitudesAprobadas SolicitudRegistro[] @relation("SolicitudAprobadaUsuario")
  sanciones            Sancion[]
  prestamos            Prestamo[]
  incumplimientos      Incumplimiento[]
  apelaciones          Apelacion[]
  aceptacionesTerminos  AceptacionTerminos[]
  cuentaAcceso         CuentaAcceso?

  @@index([tipoUsuario])
  @@index([vinculacionVigente])
  @@map("usuarios")
}

model Sancion {
  id                    String          @id @default(uuid()) @db.Uuid
  usuarioId             String          @db.Uuid
  incumplimientoId      String?         @unique @db.Uuid
  reglaId               String?         @db.Uuid
  versionReglaId        String?         @db.Uuid
  estado                EstadoSancion   @default(ACTIVA)
  fechaInicio           DateTime        @db.Timestamptz(3)
  fechaFin              DateTime?       @db.Timestamptz(3)
  confianzaAnterior     Decimal         @db.Decimal(5, 2)
  confianzaPosterior    Decimal         @db.Decimal(5, 2)
  createdAt             DateTime        @default(now()) @db.Timestamptz(3)
  updatedAt             DateTime        @updatedAt @db.Timestamptz(3)

  usuario        Usuario          @relation(fields: [usuarioId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  incumplimiento Incumplimiento? @relation("IncumplimientoSancion", fields: [incumplimientoId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  regla          ReglaUso?        @relation("ReglaSanciones", fields: [reglaId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  versionRegla   VersionRegla?    @relation("VersionSanciones", fields: [versionReglaId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  @@index([usuarioId, estado])
  @@index([estado, fechaFin])
  @@index([reglaId])
  @@index([versionReglaId])
  @@map("sanciones")
}

// -----------------------------------------------------------------------------
// PRÉSTAMOS
// -----------------------------------------------------------------------------

model Prestamo {
  id         String          @id @default(uuid()) @db.Uuid
  usuarioId  String          @db.Uuid
  ejemplarId String          @db.Uuid
  fechaInicio DateTime       @db.Timestamptz(3)
  fechaFin   DateTime        @db.Timestamptz(3)
  estado     EstadoPrestamo  @default(PLANIFICADO)
  createdAt  DateTime        @default(now()) @db.Timestamptz(3)
  updatedAt  DateTime        @updatedAt @db.Timestamptz(3)

  usuario   Usuario    @relation(fields: [usuarioId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  ejemplar  Ejemplar   @relation(fields: [ejemplarId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  devolucion Devolucion?

  // Regla de dominio: un ejemplar no puede tener intervalos PLANIFICADOS o
  // ACTIVOS superpuestos. Prisma no expresa exclusion constraints; se debe
  // agregar una migración SQL con tstzrange + EXCLUDE USING GIST.
  @@index([ejemplarId, estado, fechaInicio, fechaFin])
  @@index([usuarioId, estado])
  @@index([fechaFin, estado])
  @@map("prestamos")
}

model Devolucion {
  id         String   @id @default(uuid()) @db.Uuid
  prestamoId String   @unique @db.Uuid
  fecha      DateTime @db.Timestamptz(3)
  observacion String? @db.Text
  createdAt  DateTime @default(now()) @db.Timestamptz(3)

  prestamo Prestamo @relation(fields: [prestamoId], references: [id], onDelete: Cascade, onUpdate: Cascade)

  @@map("devoluciones")
}

// -----------------------------------------------------------------------------
// REGLAS, INCUMPLIMIENTOS Y APELACIONES
// -----------------------------------------------------------------------------

model ReglaUso {
  id              String         @id @default(uuid()) @db.Uuid
  versionVigenteId String?       @unique @db.Uuid
  createdAt       DateTime       @default(now()) @db.Timestamptz(3)
  updatedAt       DateTime       @updatedAt @db.Timestamptz(3)

  versiones       VersionRegla[] @relation("ReglaVersiones")
  versionVigente  VersionRegla?  @relation("ReglaVersionVigente", fields: [versionVigenteId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  incumplimientos Incumplimiento[]
  sanciones       Sancion[]       @relation("ReglaSanciones")

  @@map("reglas_uso")
}

model VersionRegla {
  id                     String              @id @default(uuid()) @db.Uuid
  reglaId                String              @db.Uuid
  numero                 Int
  titulo                 String              @db.VarChar(180)
  descripcion            String              @db.Text
  penalizacionPorcentual Decimal             @db.Decimal(5, 2)
  consecuencia           String              @db.Text
  estado                 EstadoRegla        @default(ACTIVA)
  createdAt              DateTime            @default(now()) @db.Timestamptz(3)

  regla              ReglaUso          @relation("ReglaVersiones", fields: [reglaId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  reglaVigentePara   ReglaUso?         @relation("ReglaVersionVigente")
  incumplimientos    Incumplimiento[]
  sanciones          Sancion[]         @relation("VersionSanciones")

  // Las versiones son históricas e inmutables. La aplicación debe impedir
  // updates sobre su contenido después de crear la versión.
  @@unique([reglaId, numero])
  @@index([estado])
  @@index([reglaId, estado])
  @@map("versiones_regla")
}

model Incumplimiento {
  id                    String       @id @default(uuid()) @db.Uuid
  usuarioId             String       @db.Uuid
  reglaId               String       @db.Uuid
  versionReglaId        String       @db.Uuid
  fecha                 DateTime     @default(now()) @db.Timestamptz(3)
  penalizacionAplicada  Decimal      @db.Decimal(5, 2)
  createdAt             DateTime     @default(now()) @db.Timestamptz(3)

  usuario      Usuario       @relation(fields: [usuarioId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  regla        ReglaUso      @relation(fields: [reglaId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  versionRegla VersionRegla  @relation(fields: [versionReglaId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  sancion      Sancion?      @relation("IncumplimientoSancion")
  apelacion    Apelacion?

  // Registro histórico: debe conservar reglaId, versionReglaId y la
  // penalización realmente aplicada aunque la regla cambie posteriormente.
  @@index([usuarioId, fecha])
  @@index([reglaId, versionReglaId])
  @@map("incumplimientos")
}

model Apelacion {
  id                  String          @id @default(uuid()) @db.Uuid
  incumplimientoId    String          @unique @db.Uuid
  usuarioId           String          @db.Uuid
  motivo              String          @db.Text
  fecha               DateTime        @default(now()) @db.Timestamptz(3)
  estado              EstadoApelacion @default(PENDIENTE)
  resolucion          String?         @db.Text
  fechaResolucion     DateTime?       @db.Timestamptz(3)
  resueltaPorCuentaId String?         @db.Uuid
  createdAt           DateTime        @default(now()) @db.Timestamptz(3)
  updatedAt           DateTime        @updatedAt @db.Timestamptz(3)

  incumplimiento Incumplimiento @relation(fields: [incumplimientoId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  usuario        Usuario        @relation(fields: [usuarioId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  resueltaPor    CuentaAcceso?  @relation("CuentaResolutora", fields: [resueltaPorCuentaId], references: [id], onDelete: SetNull, onUpdate: Cascade)

  @@index([usuarioId, estado])
  @@index([estado, fecha])
  @@index([resueltaPorCuentaId])
  @@map("apelaciones")
}

// -----------------------------------------------------------------------------
// TÉRMINOS
// -----------------------------------------------------------------------------

model VersionTerminos {
  id        String   @id @default(uuid()) @db.Uuid
  numero    Int      @unique
  titulo    String?  @db.VarChar(180)
  contenido String?  @db.Text
  createdAt DateTime @default(now()) @db.Timestamptz(3)

  aceptaciones AceptacionTerminos[]

  @@map("versiones_terminos")
}

model AceptacionTerminos {
  id              String   @id @default(uuid()) @db.Uuid
  usuarioId       String   @db.Uuid
  versionTerminosId String  @db.Uuid
  fecha           DateTime @default(now()) @db.Timestamptz(3)
  createdAt       DateTime @default(now()) @db.Timestamptz(3)

  usuario        Usuario        @relation(fields: [usuarioId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  versionTerminos VersionTerminos @relation(fields: [versionTerminosId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  @@unique([usuarioId, versionTerminosId])
  @@index([usuarioId, fecha])
  @@map("aceptaciones_terminos")
}

// -----------------------------------------------------------------------------
// AUTENTICACIÓN
// -----------------------------------------------------------------------------

model CuentaAcceso {
  id           String     @id @default(uuid()) @db.Uuid
  usuarioId    String     @unique @db.Uuid
  email        String     @unique @db.VarChar(254)
  passwordHash String     @db.VarChar(255)
  rol          RolAcceso  @default(USUARIO)
  habilitada   Boolean    @default(true)
  ultimoAcceso DateTime?  @db.Timestamptz(3)
  createdAt    DateTime   @default(now()) @db.Timestamptz(3)
  updatedAt    DateTime   @updatedAt @db.Timestamptz(3)

  usuario       Usuario      @relation(fields: [usuarioId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  apelacionesResueltas Apelacion[] @relation("CuentaResolutora")

  @@index([rol, habilitada])
  @@map("cuentas_acceso")
}

// -----------------------------------------------------------------------------
// ENUMERACIONES DEL DOMINIO
// -----------------------------------------------------------------------------

enum EstadoEjemplar {
  DISPONIBLE
  PRESTADO
  NO_DISPONIBLE
}

enum EstadoPrestamo {
  PLANIFICADO
  ACTIVO
  FINALIZADO
}

enum TipoUsuario {
  ESTUDIANTE
  DOCENTE
  ADMINISTRATIVO
}

enum EstadoSolicitud {
  PENDIENTE
  APROBADA
  RECHAZADA
}

enum EstadoSancion {
  ACTIVA
  FINALIZADA
}

enum EstadoRegla {
  ACTIVA
  INACTIVA
}

enum EstadoApelacion {
  PENDIENTE
  ACEPTADA
  RECHAZADA
}

enum RolAcceso {
  USUARIO
  OPERADOR
  ADMINISTRADOR
}
