@startuml ModeloDominio

title Modelo de dominio propuesto — préstamos universitarios

left to right direction


' =========================================================
' CONFIGURACIÓN VISUAL
' =========================================================

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam packageStyle rectangle

skinparam classAttributeIconSize 0
skinparam defaultFontName SansSerif
skinparam defaultFontSize 11
skinparam classFontSize 11
skinparam packageFontSize 12
skinparam noteFontSize 10
skinparam legendFontSize 10
skinparam ArrowFontSize 10

skinparam linetype ortho

' Separación vertical y horizontal entre elementos.
skinparam nodesep 55
skinparam ranksep 85

skinparam ArrowColor #475569
skinparam ClassBorderColor #475569
skinparam PackageBorderColor #64748B

skinparam NoteBorderColor #94A3B8
skinparam NoteBackgroundColor #F8FAFC

hide circle
hide empty methods


' =========================================================
' BOUNDED CONTEXT: INVENTARIO
' =========================================================

package "Inventario · inventory\n<<Bounded Context · soporte>>" as BCInventario #E8F1FA {

    package "Categoría de recurso\n<<Aggregate>>" as AgCategoria #F8FBFE {

        class CategoriaRecurso <<Aggregate Root · Entity>> {
            categoriaId : CategoriaRecursoId
            nombre : String
            tiempoMaximoPrestamo : Duracion
        }
    }


    package "Recurso\n<<Aggregate>>" as AgRecurso #F8FBFE {

        class Recurso <<Aggregate Root · Entity>> {
            recursoId : RecursoId
            categoriaId : CategoriaRecursoId
            nombre : String
            /disponible : Boolean
        }
    }


    package "Ejemplar\n<<Aggregate>>" as AgEjemplar #F8FBFE {

        enum EstadoEjemplar {
            DISPONIBLE
            PRESTADO
            NO_DISPONIBLE
        }


        class Ejemplar <<Aggregate Root · Entity>> {
            ejemplarId : EjemplarId
            recursoId : RecursoId
            estado : EstadoEjemplar
        }


        class ObservacionEjemplar <<Entity>> {
            observacionId : ObservacionEjemplarId
            fecha : FechaHora
            descripcion : String
        }


        ' -------------------------------------------------
        ' Relaciones reales
        '
        ' El nombre "observaciones" se coloca junto al
        ' extremo 0..*, evitando la etiqueta flotante.
        ' -------------------------------------------------

        Ejemplar ..> EstadoEjemplar : estado

        Ejemplar "1" *-- "0..*\nobservaciones" ObservacionEjemplar


        ' -------------------------------------------------
        ' ORDEN VISUAL DEL AGREGADO
        '
        '          EstadoEjemplar
        '                |
        '                |
        '           Ejemplar -------------- Observaciones
        ' -------------------------------------------------

        EstadoEjemplar -[hidden]down-> Ejemplar

        Ejemplar -[hidden]right-> ObservacionEjemplar
    }


    ' Los nombres se modelan como roles en los extremos.
    CategoriaRecurso "1" <-- "0..*\nrecursos" Recurso

    Recurso "1" --> "1..*\nejemplares" Ejemplar


    note bottom of Recurso
        Disponible si existe al menos
        un ejemplar DISPONIBLE.
    end note


    ' Orden horizontal del bounded context.
    AgCategoria -[hidden]right-> AgRecurso
    AgRecurso -[hidden]right-> AgEjemplar
}


' =========================================================
' BOUNDED CONTEXT: PRÉSTAMOS
' =========================================================

package "Préstamos · loans\n<<Bounded Context · central>>" as BCPrestamos #FFF2CC {

    package "Préstamo\n<<Aggregate>>" as AgPrestamo #FFFBEB {

        class "Préstamo" as Prestamo <<Aggregate Root · Entity>> {
            prestamoId : PrestamoId
            usuarioId : UsuarioId
            ejemplarId : EjemplarId

            fechaInicio : FechaHora
            fechaFin : FechaHora

            /estado : EstadoPrestamo
            /vencido : Boolean
        }


        enum EstadoPrestamo {
            PLANIFICADO
            ACTIVO
            FINALIZADO
        }


        class "Devolución" as Devolucion <<Value Object>> {
            fecha : FechaHora
            observacion : String [0..1]

            {invariant} fecha >= Prestamo.fechaInicio
        }


        Prestamo ..> EstadoPrestamo : estado

        Prestamo "1" *-- "0..1\ndevolución" Devolucion


        ' Orden visual interno.
        Prestamo -[hidden]right-> EstadoPrestamo
        EstadoPrestamo -[hidden]down-> Devolucion
    }


    note bottom of Prestamo
        Un mismo ejemplar no puede tener
        intervalos de préstamo superpuestos.
    end note
}


' =========================================================
' BOUNDED CONTEXT: USUARIOS
' =========================================================

package "Usuarios · users\n<<Bounded Context · soporte>>" as BCUsuarios #E8F1FA {

    package "Solicitud de registro\n<<Aggregate>>" as AgSolicitud #F8FBFE {

        class SolicitudRegistro <<Aggregate Root · Entity>> {
            solicitudId : SolicitudRegistroId
            tipoUsuario : TipoUsuario
            identificadorInstitucional : String [0..1]
            fechaSolicitud : FechaHora
            estado : EstadoSolicitud
        }


        class EvidenciaVinculacion <<Value Object>> {
            informacion : String
        }


        SolicitudRegistro "1" *-- "0..*\nevidencias" EvidenciaVinculacion


        SolicitudRegistro -[hidden]right-> EvidenciaVinculacion
    }


    package "Usuario\n<<Aggregate>>" as AgUsuario #F8FBFE {

        class Usuario <<Aggregate Root · Entity>> {
            usuarioId : UsuarioId
            nombre : String
            tipoUsuario : TipoUsuario
            identificadorInstitucional : String [0..1]
            vinculacionVigente : Boolean
        }
    }


    enum TipoUsuario {
        ESTUDIANTE
        DOCENTE
        ADMINISTRATIVO
    }


    enum EstadoSolicitud {
        PENDIENTE
        APROBADA
        RECHAZADA
    }


    SolicitudRegistro ..> TipoUsuario : tipo

    SolicitudRegistro ..> EstadoSolicitud : estado

    SolicitudRegistro ..> Usuario : aprobación

    Usuario ..> TipoUsuario : tipo


    AgSolicitud -[hidden]down-> AgUsuario
}


' =========================================================
' BOUNDED CONTEXT: CONFIANZA
' =========================================================

package "Confianza · trust\n<<Bounded Context · soporte>>" as BCConfianza #E2F3E8 {

    package "Perfil de confianza\n<<Aggregate>>" as AgPerfilConfianza #F4FBF6 {

        class PerfilConfianza <<Aggregate Root · Entity>> {
            perfilConfianzaId : PerfilConfianzaId
            usuarioId : UsuarioId
            porcentaje : PorcentajeConfianza
            /nivel : NivelConfianza
            /restringidoParaPrestamos : Boolean
        }


        class PorcentajeConfianza <<Value Object>> {
            valor : Decimal

            {invariant} 0 <= valor <= 100
        }


        enum NivelConfianza {
            NIVEL_1
            NIVEL_2
            NIVEL_3
            NIVEL_4
        }


        PerfilConfianza "1" *-- "1\nporcentaje" PorcentajeConfianza

        PerfilConfianza ..> NivelConfianza : nivel derivado


        PerfilConfianza -[hidden]right-> PorcentajeConfianza

        PorcentajeConfianza -[hidden]right-> NivelConfianza
    }


    package "Sanción\n<<Aggregate>>" as AgSancion #F4FBF6 {

        class "Sanción" as Sancion <<Aggregate Root · Entity>> {
            sancionId : SancionId
            usuarioId : UsuarioId

            incumplimientoId : IncumplimientoId
            reglaId : ReglaUsoId
            versionReglaId : VersionReglaId
            impuestaPorCuentaId : CuentaAccesoId

            fechaInicio : FechaHora
            fechaFin : FechaHora
            estado : EstadoSancion

            confianzaAnterior : PorcentajeConfianza
            confianzaPosterior : PorcentajeConfianza
            /cambioConfianza : Decimal
        }


        enum EstadoSancion {
            ACTIVA
            FINALIZADA
            ABSUELTA
        }


        Sancion ..> EstadoSancion : estado


        Sancion -[hidden]right-> EstadoSancion
    }


    package "Apelación\n<<Aggregate>>" as AgApelacion #F4FBF6 {

        class "Apelación" as Apelacion <<Aggregate Root · Entity>> {
            apelacionId : ApelacionId
            sancionId : SancionId
            usuarioId : UsuarioId

            fechaSolicitud : FechaHora
            motivo : String
            estado : EstadoApelacion

            fechaResolucion : FechaHora [0..1]
            resueltaPorCuentaId : CuentaAccesoId [0..1]
            fundamentoResolucion : String [0..1]
        }


        enum EstadoApelacion {
            PENDIENTE
            ACEPTADA
            RECHAZADA
        }


        Apelacion ..> EstadoApelacion : resultado


        Apelacion -[hidden]right-> EstadoApelacion
    }


    PerfilConfianza "1" --> "0..*\nsanciones por usuarioId" Sancion

    Sancion "1" <-- "0..*\napelaciones por sancionId" Apelacion


    note bottom of Sancion
        Una sanción activa de restricción impide préstamos al estudiante
        durante el intervalo registrado. Conserva la regla,
        su versión y el cambio de confianza aplicados.
    end note


    note bottom of Apelacion
        Solo una sanción activa puede apelarse.
        El historial conserva cada solicitud y su resultado;
        una apelación aceptada deja la sanción ABSUELTA.
    end note


    AgPerfilConfianza -[hidden]down-> AgSancion

    AgSancion -[hidden]down-> AgApelacion
}


' =========================================================
' ÁREA DE DOMINIO: REGLAS Y TÉRMINOS
' =========================================================

package "Reglas y términos\n<<Área de dominio · límite por validar>>" as AreaReglas #F1F5F9 {

    ' =====================================================
    ' COLUMNA DE REGLAS
    ' =====================================================

    package "Regla de uso\n<<Aggregate>>" as AgRegla #F8FAFC {

        class ReglaUso <<Aggregate Root · Entity>> {
            reglaId : ReglaUsoId
            versionVigenteId : VersionReglaId
        }
    }


    package "Versión de regla\n<<Aggregate>>" as AgVersionRegla #F8FAFC {

        class VersionRegla <<Aggregate Root · Entity>> {
            versionId : VersionReglaId
            reglaId : ReglaUsoId

            numero : Integer
            titulo : String
            descripcion : String

            penalizacionPorcentual : Decimal
            consecuencia : String
            duracionRestriccionEstudiante : Duracion

            estado : EstadoRegla

            {invariant} versión histórica inmutable
        }
    }


    enum EstadoRegla {
        ACTIVA
        INACTIVA
    }


    package "Incumplimiento\n<<Aggregate>>" as AgIncumplimiento #F8FAFC {

        class Incumplimiento <<Aggregate Root · Entity>> {
            incumplimientoId : IncumplimientoId
            usuarioId : UsuarioId

            reglaId : ReglaUsoId
            versionReglaId : VersionReglaId

            fecha : FechaHora
            penalizacionAplicada : Decimal

            {invariant} registro histórico inmutable
        }
    }


    package "Apelación\n<<Aggregate>>" as AgApelacion #F8FAFC {

        class Apelacion <<Aggregate Root · Entity>> {
            apelacionId : ApelacionId
            incumplimientoId : IncumplimientoId
            usuarioId : UsuarioId

            motivo : String
            fecha : FechaHora

            estado : EstadoApelacion

            resolucion : String [0..1]
            fechaResolucion : FechaHora [0..1]

            {invariant} fecha >= Incumplimiento.fecha
        }
    }


    enum EstadoApelacion {
        PENDIENTE
        ACEPTADA
        RECHAZADA
    }


    ReglaUso "1" --> "1..*\nversiones" VersionRegla

    VersionRegla ..> EstadoRegla : estado

    Incumplimiento "0..*" --> "1\nversión infringida" VersionRegla

    Incumplimiento "1" --> "0..1\napelación" Apelacion

    Apelacion ..> EstadoApelacion : estado


    note bottom of Apelacion
        Un incumplimiento admite como máximo
        una apelación activa. Una apelación
        ACEPTADA revierte la penalización aplicada
        (mecanismo de reversión de confianza
        pendiente de definir).
    end note


    ' =====================================================
    ' COLUMNA DE TÉRMINOS
    ' =====================================================

    note "Historial de incumplimientos:\nconserva la versión de la regla\ny la penalización realmente aplicada." as NotaHistorial


    package "Versión de términos\n<<Aggregate>>" as AgVersionTerminos #F8FAFC {

        class VersionTerminos <<Aggregate Root · Entity>> {
            versionTerminosId : VersionTerminosId
            numero : Integer
        }
    }


    package "Aceptación de términos\n<<Aggregate>>" as AgAceptacion #F8FAFC {

        class "AceptaciónTérminos" as AceptacionTerminos <<Aggregate Root · Entity>> {
            aceptacionId : AceptacionTerminosId
            usuarioId : UsuarioId
            versionTerminosId : VersionTerminosId
            fecha : FechaHora
        }
    }


    AceptacionTerminos "0..*" -up-> "1\nversión aceptada" VersionTerminos


    ' =====================================================
    ' ORDEN VISUAL INTERNO
    ' =====================================================

    AgRegla -[hidden]down-> AgVersionRegla

    AgVersionRegla -[hidden]down-> AgIncumplimiento

    AgIncumplimiento -[hidden]down-> AgApelacion


    NotaHistorial -[hidden]down-> AgVersionTerminos

    AgVersionTerminos -[hidden]down-> AgAceptacion


    AgRegla -[hidden]right-> NotaHistorial

    AgVersionRegla -[hidden]right-> AgVersionTerminos

    AgIncumplimiento -[hidden]right-> AgAceptacion

    AgApelacion -[hidden]right-> EstadoApelacion
}


' =========================================================
' BOUNDED CONTEXT: AUTENTICACIÓN
' =========================================================

package "Autenticación · auth\n<<Bounded Context · genérico de apoyo>>" as BCAuth #F3E8FF {

    package "Cuenta de acceso\n<<Aggregate>>" as AgCuenta #FAF5FF {

        class CuentaAcceso <<Aggregate Root · Entity>> {
            cuentaId : CuentaAccesoId
            usuarioId : UsuarioId
            rol : RolAcceso
            /habilitada : Boolean
        }
    }


    enum RolAcceso {
        USUARIO
        OPERADOR
        ADMINISTRADOR
    }


    CuentaAcceso ..> RolAcceso : rol


    AgCuenta -[hidden]right-> RolAcceso
}


' =========================================================
' RELACIONES ENTRE CONTEXTOS
'
' Las referencias concretas entre agregados se almacenan
' mediante sus identificadores.
' =========================================================

BCPrestamos ..> BCInventario : consulta\n disponibilidad

BCPrestamos ..> BCUsuarios : identifica\n usuario

BCPrestamos ..> BCConfianza : consulta habilitación\n y sanciones activas

BCAuth ..> BCUsuarios : identidad\n y acceso

AreaReglas ..> BCConfianza : origina cambios de confianza\n y sanciones

BCConfianza ..> BCUsuarios : referencia usuarioId

BCConfianza ..> BCAuth : referencia operador\n y administrador


' =========================================================
' ORDEN VISUAL GLOBAL
' =========================================================

BCInventario -[hidden]right-> BCPrestamos

BCPrestamos -[hidden]right-> BCUsuarios

BCUsuarios -[hidden]down-> BCConfianza

BCPrestamos -[hidden]down-> BCAuth

BCConfianza -[hidden]right-> AreaReglas


BCAuth -[hidden]right-> AreaReglas


' =========================================================
' LEYENDA
' =========================================================

legend bottom

|= Estereotipo |= Significado |
| <<Bounded Context>> | Límite de un modelo de dominio |
| <<Aggregate>> | Límite de consistencia |
| <<Aggregate Root · Entity>> | Raíz del agregado |
| <<Entity>> | Objeto del dominio con identidad |
| <<Value Object>> | Valor definido por sus atributos |

Las referencias entre bounded contexts se realizan por identificador.
Los atributos derivados se indican mediante /.
Apelaciones permanece dentro de Confianza porque revisa el ciclo de vida
de una sanción; no se justifica todavía un bounded context independiente.

endlegend


@enduml
